--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.66.1"
 uvicorn = "^0.14.0"
 python-dotenv = "^0.18.0"
 SQLAlchemy = "^1.4.21"
+PyMySQL = "^1.0.2"
+Werkzeug = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
@@ -20,4 +22,4 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.poetry.scripts]
-start = "sonnenblume:main"
+start = "sonnenblume.main:start_with_poetry"
