--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^0.18.0"
 SQLAlchemy = "^1.4.21"
 PyMySQL = "^1.0.2"
 Werkzeug = "^2.0.1"
+alembic = "^1.6.5"
 
 [tool.poetry.dev-dependencies]
 
