--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ fastapi = "^0.66.1"
 uvicorn = "^0.14.0"
 python-dotenv = "^0.18.0"
 SQLAlchemy = "^1.4.21"
-PyMySQL = "^1.0.2"
 Werkzeug = "^2.0.1"
 alembic = "^1.6.5"
+aiomysql = "^0.0.21"
 
 [tool.poetry.dev-dependencies]
 
