--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ SQLAlchemy = "^1.4.21"
 Werkzeug = "^2.0.1"
 alembic = "^1.6.5"
 aiomysql = "^0.0.21"
+email-validator = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 
