--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ Werkzeug = "^2.0.1"
 alembic = "^1.6.5"
 aiomysql = "^0.0.21"
 email-validator = "^1.1.3"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 
