--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ alembic = "^1.6.5"
 aiomysql = "^0.0.21"
 email-validator = "^1.1.3"
 python-multipart = "^0.0.5"
+python-jose = "^3.3.0"
+cryptography = "^3.4.7"
 
 [tool.poetry.dev-dependencies]
 
